--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Alien::Build::Plugin::Build::Premake
+Revision history for Alien::Build::Plugin::Build::Premake5
 
 {{$NEXT}}
 
