Update change log

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Alien::Build::Plugin::Build::Premake5
 
 {{$NEXT}}
 
+  * Fix:
+    * Correct the package name on distribution's tests
+
 0.001     2017-10-30 16:33:41+00:00 Europe/London
 
   * Initial release
